syntax = "proto3";

package gitpod.experimental.v1;

option go_package = "github.com/gitpod-io/gitpod/components/public-api/go/experimental/v1";

service IDPService {
  // GetIDToken produces a new IT token
  rpc GetIDToken(GetIDTokenRequest) returns (GetIDTokenResponse) {};
}

message GetIDTokenRequest {
    string workspace_id = 1;
    repeated string audience = 2;
}

message GetIDTokenResponse {
    string token = 1;
}
